--- a/src/08/code/t2/style.css
+++ b/src/08/code/t2/style.css
@@ -3,15 +3,16 @@ div {
 }
 
 .board {
-    width: 84vw;
+    width: 98vh;
+    height: 84vh;
     margin: auto;
     outline: 1px solid black;
 }
 
 .board .field {
     border: 1px solid black;
-    width: 12vw;
-    height: 12vw;
+    width: 14vh;
+    height: 14vh;
     float: left;
 }
 
@@ -20,10 +21,10 @@ div {
 }
 
 .board .field .piece {
-    width: 10vw;
-    height: 10vw;
+    width: 12vh;
+    height: 12vh;
     border-radius: 50%;
-    margin: 1vw;
+    margin: 1vh;
 }
 
 .board .field .blue {
